--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "your-project",
+    "name": "server",
     "version": "1.0.0",
     "scripts": {
+      "start": "node app.js",
       "test": "jest"
   },
   "dependencies": {
