--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
     "name": "server",
     "version": "1.0.0",
+    "main": "app.js",
     "scripts": {
       "start": "node app.js",
       "test": "jest"
